# aider-patcher

./: .gitignore  Cargo.toml  GEMINI.md  a.txt  bridge.sh  c.sh  flake.nix
src/: main.rs
